PLANET-6959 Fix possible overflow in comment text
We need this in case comments contain a really long word or URL

--- a/assets/src/scss/pages/post/_comments-block.scss
+++ b/assets/src/scss/pages/post/_comments-block.scss
@@ -20,6 +20,7 @@
   font-size: 16px;
   line-height: 1.5;
   margin-bottom: 8px;
+  overflow-wrap: break-word;
 }
 
 .single-comment-meta {
